<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/form_layout"
    tools:context="com.example.emerich.mamoyenne.Traitment.AddMenu"
    android:background="#ff2e2e2e">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ff3397ff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sectionM"
                android:id="@+id/section1"
                android:textColor="#ff3397ff"
                android:layout_gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="#ff3397ff"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/matiere"
                    android:id="@+id/textView2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="0.32"
                    android:textColor="#ffbfad97" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/coef"
                    android:id="@+id/textView3"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_toRightOf="@+id/delete"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="40dp"
                    android:textColor="#FFBFAD97" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/matiereText"
                    android:layout_weight="0.80"
                    android:inputType="text"
                    android:textColor="#ffffffff"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:background="#d4595552"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#d4595552" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/coefText"
                    android:layout_weight="0.20"
                    android:textColor="#ffffffff"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:background="#d4595552"
                    android:backgroundTint="#d4595552" />
            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/aMatiere"
                android:id="@+id/insertBtn"
                android:layout_gravity="center"
                style="@style/btnStyleSandrift"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:longClickable="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#d4595552"
                    android:background="#d4595552"
                    android:clickable="false"
                    android:popupBackground="#d4595552" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/supprimer"
                        android:id="@+id/delete"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        style="@style/btnStyleSandrift"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:id="@+id/upMatiere"
                        android:layout_marginTop="20dp"
                        style="@style/btnStyleSandrift"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>
            </LinearLayout>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/newMatiere"
                android:layout_weight="0.20"
                android:textColor="#ffffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                android:background="#d4595552"
                android:backgroundTint="#d4595552"/>

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retour"
            android:layout_marginTop="60dp"
            android:text="@string/retour"
            style="@style/btnStyleSandrift"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>